--- a/index.html
+++ b/index.html
@@ -1,64 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Escolha o Jogo</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
-        iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-        .game-selection {
-            position: absolute;
-            top: 20%;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 24px;
-            color: white;
-            z-index: 10;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 18px;
-            background-color: #333;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #555;
-        }
-    </style>
+  <meta charset="utf-8">
+  <title>Seleção de Jogos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f0f0f0;
+    }
+    .game-selection {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+    .game-box {
+      width: 300px;
+      height: 300px;
+      position: relative;
+      border: 3px solid #000;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+    .game-box img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .game-box:hover {
+      transform: scale(1.05);
+    }
+    .game-box:active {
+      transform: scale(0.98);
+    }
+    .game-box:focus {
+      outline: none;
+    }
+    iframe {
+      width: 100vw;
+      height: 100vh;
+      border: none;
+    }
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-    <div class="game-selection">
-        <button onclick="loadGame('subway')">Subway Surfers</button>
-        <button onclick="loadGame('leveldevil')">Level Devil</button>
+  <div class="game-selection">
+    <div class="game-box" onclick="loadGame('subway')">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYr633KwsnhaXFGKHmIWGzOkNXGGXO78y8Aj5b1ZFho-CG4mxq7hu74Mc&s=10" alt="Subway Surfers">
     </div>
-    <iframe id="gameFrame" src="" style="display: none;"></iframe>
+    <div class="game-box" onclick="loadGame('level-devil')">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmsOr1jERtpCY1ffmHKlUhW7vrdhJdSvWKYVdx5vMor6tO9wCedD-P1Zo&s=10" alt="Level Devil">
+    </div>
+  </div>
+  <div id="game-container" class="hidden">
+    <iframe id="game-frame" src="" frameborder="0" allowfullscreen></iframe>
+  </div>
 
-    <script>
-        function loadGame(game) {
-            let iframe = document.getElementById('gameFrame');
-            if (game === 'subway') {
-                iframe.src = 'https://szhong.4399.com/4399swf//upload_swf/ftp38/liuxinyu/20220308/1/index.html';
-            } else if (game === 'leveldevil') {
-                iframe.src = 'https://bitlifeonline.github.io/level-devil/';
-            }
-            iframe.style.display = 'block';
-        }
-    </script>
+  <script>
+    function loadGame(game) {
+      document.querySelector('.game-selection').classList.add('hidden');
+      const iframe = document.getElementById('game-frame');
+      if (game === 'subway') {
+        iframe.src = "https://szhong.4399.com/4399swf//upload_swf/ftp38/liuxinyu/20220308/1/index.html";
+      } else if (game === 'level-devil') {
+        iframe.src = "https://bitlifeonline.github.io/level-devil/";
+      }
+      document.getElementById('game-container').classList.remove('hidden');
+    }
+  </script>
 </body>
 </html>
